# backend/backend.go
@@ -8,10 +8,10 @@ import (
 	"github.com/ngalaiko/miniboard/backend/authorizations"
 	"github.com/ngalaiko/miniboard/backend/crawler"
 	"github.com/ngalaiko/miniboard/backend/db"
-	"github.com/ngalaiko/miniboard/backend/feeds"
 	"github.com/ngalaiko/miniboard/backend/httpx"
 	"github.com/ngalaiko/miniboard/backend/logger"
 	"github.com/ngalaiko/miniboard/backend/operations"
+	"github.com/ngalaiko/miniboard/backend/subscriptions"
 	"github.com/ngalaiko/miniboard/backend/tags"
 	"github.com/ngalaiko/miniboard/backend/users"
 )
@@ -55,7 +55,7 @@ func New(logger *logger.Logger, cfg *Config) (*Server, error) {
 	usersService := users.NewService(db, cfg.Users)
 	operationsService := operations.NewService(logger, db, cfg.Operations)
 	tagsService := tags.NewService(db)
-	feedsService := feeds.NewService(db, crawler.New(), logger)
+	subscriptionsService := subscriptions.NewService(db, crawler.New(), logger)
 
 	withAuth := authorizations.Authenticate(authorizationsService, cfg.Authorizations, logger)
 
@@ -68,8 +68,8 @@ func New(logger *logger.Logger, cfg *Config) (*Server, error) {
 		authorizations.NewHandler(usersService, authorizationsService, logger, cfg.Authorizations),
 		httpx.WithCors(corsDomains...),
 	))
-	httpServer.Route("/v1/feeds", httpx.Chain(
-		feeds.NewHandler(feedsService, logger, operationsService),
+	httpServer.Route("/v1/subscriptions", httpx.Chain(
+		subscriptions.NewHandler(subscriptionsService, logger, operationsService),
 		httpx.WithCors(corsDomains...),
 		withAuth,
 	))
